more improvements to concepts,use and create javatweeks section